--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.16.1",
     "fastest-validator": "^1.12.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.8.1",
     "mongoose": "^6.4.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
